--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.SandeepBhaskar.github.io/todo-list/",
+  "homepage": "https://SandeepBhaskar.github.io/todo-list/",
   "name": "todo-list",
   "private": true,
   "version": "0.0.0",
